[tool.poetry]
name = "qa-guru-python-6-19"
version = "0.1.0"
description = ""
authors = ["Bezgubenko Helen <protasova-ea@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0b5"
pytest = "7.4.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
